--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -10,6 +10,9 @@ jobs:
     name: Update README
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    permissions:
+      contents: write
+      models: read
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,9 +22,17 @@ jobs:
         uses: AnandChowdhary/notes-summary@HEAD
         with:
           token: "${{ secrets.GITHUB_TOKEN }}"
-          openAiApiKey: "${{ secrets.OPENAI_API_KEY }}"
           commitMessage: ":pencil: Update versions summary [skip ci]"
           directory: "versions"
+          caption: |
+            const result = [];
+            if (attributes.stack)
+              result.push(`🔧 ${attributes.stack.join(", ")}`);
+            if (attributes.type)
+              result.push(`🔤 ${attributes.type.join(", ")}`);
+            if (attributes.generator)
+              result.push(`⚙️ ${attributes.generator}`);
+            return result.join("\n");
       - name: Dispatch AnandChowdhary/everything update
         uses: benc-uk/workflow-dispatch@v1.2.2
         with:
